Fix Images not loading in UI.
Known issues. Footer copyright slug is not centered

--- a/frontend/src/components/Footer.scss
+++ b/frontend/src/components/Footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    text-align: center;
+    align-content: center;
     padding-top: 3px;
     min-height: 80vh;
 }
